microservices-datadriven-infra/oci-iaas/grabdish-adapter/k8s/create_ingress_jaeger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    #nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    #nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    #nginx.kubernetes.io/ingress.allow-http: "false"
    #nginx.org/redirect-to-https: "true"
    #kubernetes.io/ingress.allow-http: "false"
    #    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      secretName: ssl-certificate-secret
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 4444
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 443
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 443
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 443
